--- a/kernels/plugins/cyt_adapter/Makefile
+++ b/kernels/plugins/cyt_adapter/Makefile
@@ -16,12 +16,13 @@
 # *******************************************************************************/
 
 TARGET=ip
-DEVICE=xcu250-figd2104-2L-e
+DEVICE=xcu55c-fsvh2892-2L-e
 CYT_DMA_ADAPTER=cyt_dma_adapter_$(DEVICE).xo
 CYT_RDMA_ARBITER=cyt_rdma_arbiter_$(DEVICE).xo
 CYT_RDMA_MUX=cyt_rdma_mux_$(DEVICE).xo
+CCLO_SQ_ADAPTER=cclo_sq_adapter_$(DEVICE).xo
 
-all: $(CYT_DMA_ADAPTER) $(CYT_RDMA_ARBITER) $(CYT_RDMA_MUX)
+all: $(CYT_DMA_ADAPTER) $(CYT_RDMA_ARBITER) $(CCLO_SQ_ADAPTER)
 
 $(CYT_DMA_ADAPTER): build_cyt_dma_adapter.tcl cyt_dma_adapter.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE)
@@ -30,5 +31,8 @@ $(CYT_RDMA_ARBITER): build_cyt_rdma_arbiter.tcl cyt_rdma_arbiter.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE)
 
 $(CYT_RDMA_MUX): build_cyt_rdma_mux.tcl cyt_rdma_mux.cpp
+	vitis_hls $< -tclargs $(TARGET) $(DEVICE)
+
+$(CCLO_SQ_ADAPTER): build_cclo_sq_adapter.tcl cclo_sq_adapter.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE)
 
